--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -85,11 +85,11 @@
     <string name="spen_down_title">Action on swipe down</string>
     <string name="spen_double_title">Action on double tap</string>
     <string name="spen_long_title">Action on long press</string>
-    <string name="spen_enable">Enable S Pen Gestures</string>
+    <string name="spen_enable">S Pen Gestures</string>
     <string name="spen_enable_summary">Set custom actions for S Pen gestures</string>
     <string name="spen_extras_cat">S Pen Extras</string>
     <string name="spen_gestures_cat">S Pen Gestures</string>
-    <string name="enable_stylus_pointer_title">Enable S Pen pointer</string>
+    <string name="enable_stylus_pointer_title">S Pen pointer</string>
     <string name="enable_stylus_pointer_summary">Enable the mouse icon when using the S Pen</string>
 
     <string name="use_custom_app_title">Use custom application</string>
