--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -121,7 +121,7 @@
     <string name="expanded_desktop_status_bar">Status bar visible</string>
     <string name="expanded_desktop_no_status_bar">Status bar hidden</string>
     <string name="title_show_navbar_hide">Navigation bar menu</string>
-    <string name="title_show_reboot_keyguard">Show reboot on lockscreen</string>
+    <string name="title_show_reboot_keyguard">Reboot on lockscreen</string>
 
     <!-- Status Bar Headers -->
     <string name="status_bar_clock_header">Clock</string>
@@ -573,8 +573,6 @@
     <string name="navigation_bar_glow_tint_summary">When you press on a button, there is a glow. Use this to change the color of the glow.</string>
     <string name="navigation_bar_menu_arrow_keys_title">Menu arrow keys</string>
     <string name="navigation_bar_menu_arrow_keys_summary">Show arrow keys in the navigation bar while typing</string>
-    <string name="statusbar_hide_title">Hide statusbar</string>
-    <string name="statusbar_hide_summary">Allow to completely hide the Statusbar</string>
     <string name="navigation_bar_alpha_title">Statusbar and navigation bar opacity</string>
     <string name="navbar_hide_enable_title">Hidden navbar enable</string>
     <string name="drag_handle_opacity_title">Drag handle opacity</string>
@@ -588,6 +586,10 @@
     <string name="navbar_longpress_menu">Longpress: %1$s</string>
     <string name="navbar_icon_menu">Custom icon</string>
     <string name="navbar_delete_menu">Delete button</string>
+
+    <!-- Auto-Hide Status Bar -->
+    <string name="auto_hide_statusbar">Auto Hide statusbar</string>
+    <string name="auto_hide_statusbar_summary">Statusbar hides itself when there are no notifications</string>
 
     <!-- Nav Bar Widgets -->
     <string name="navbar_widgets">Navigation Bar Widgets</string>
