--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -115,11 +115,11 @@
     <string name="title_show_airplane_toggle">Airplane mode</string>
     <string name="power_menu_expanded_desktop">Expanded desktop</string>
     <string name="summary_expanded_desktop">%1$s</string>
-    <string name="expanded_desktop_summary_status_bar">Status bar visible</string>
-    <string name="expanded_desktop_summary_no_status_bar">Status bar hidden</string>
+    <string name="expanded_desktop_summary">Show or change expanded desktop mode</string>
     <string name="expanded_desktop_disabled">Off</string>
-    <string name="expanded_desktop_status_bar">Status bar visible</string>
-    <string name="expanded_desktop_no_status_bar">Status bar hidden</string>
+    <string name="expanded_desktop_only_nav_bar">Hide navigation bar</string>
+    <string name="expanded_desktop_only_status_bar">Hide status bar</string>
+    <string name="expanded_desktop_both_hidden">Hide navigation and status bar</string>
     <string name="title_show_navbar_hide">Navigation bar menu</string>
     <string name="title_show_reboot_keyguard">Reboot on lockscreen</string>
 
