--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -468,11 +468,12 @@
     <string name="navbar_hide_enable_title">Activer Hidden Navbar</string>
     <string name="drag_handle_opacity_title">Opacité de la poignée</string>
     <string name="drag_handle_width_title">Taille de la poignée</string>
-    <string name="title_navbar_timeout">Hidden Navbar Timeout</string>
+    <string name="title_navbar_timeout">Délai du Hide NavBar</string>
     <string name="summary_navbar_timeout">Délai d\'attente avant la disparition de la NavBar</string>
     <string name="glow_times_title">Animation de lueur des boutons</string>
     <string name="navbar_buttons_instructions">Appuyer sur l\'icône pour changer l\'action ou l\'icône</string>
     <string name="navbar_title_menu">Options du bouton</string>
+    <string name="navbar_actiontitle_menu">Appui court: %1$s</string>
     <string name="navbar_longpress_menu">Appui long: %1$s</string>
     <string name="navbar_icon_menu">Icône personnalisé</string>
     <string name="navbar_delete_menu">Supprimer le bouton</string>
