--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -900,8 +900,8 @@
     <string name="hybrid_settings_title">Hybrid settings</string>
 
     <string name="hybridmode_title">Hyrbid Mode</string>
-    <string name="hybridmode_on">Enabled</string>
-    <string name="hybridmode_off">Disabled</string>
+    <string name="hybridmode_on">On</string>
+    <string name="hybridmode_off">Off</string>
 
     <string name="uimode_title">UI Mode</string>
     <string name="uimode_phone">Phone (360dp)</string>
